<resources>
    <string name="app_name">Zalo Clone</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="zalo">Zalo</string>
    <string name="forgot_password">Lấy lại mật khẩu</string>
    <string name="sign_up">Đăng ký</string>
    <string name="hadAccount">Bạn đã có tài khoản?</string>
    <string name="next">Tiếp tục</string>
    <string name="verify_number">Xác thực số điện thoại</string>
    <string name="otp">Mã xác thực</string>
    <string name="resend">Gửi lại</string>
    <string name="name">Họ tên</string>
    <string name="title_mess">Tin nhắn</string>
    <string name="title_contact">Danh bạ</string>
    <string name="title_timeline">Nhật ký</string>
    <string name="title_profile">Cá nhân</string>
    <string name="text">Kết bạn với user ngay để cùng tạo nên những cuộc trò chuyện thú vị và đáng nhớ!</string>
    <string name="search">Tìm bạn bè...</string>

<!--    Thời gian tự động xóa file-->
    <string-array name="life_period">
        <item>1 tuần</item>
        <item>1 tháng</item>
        <item>4 tháng</item>
        <item>Không bao giờ</item>
    </string-array>

</resources>