<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_mess">
    <fragment
        android:id="@+id/navigation_mess"
        android:name="hcmute.edu.vn.nhom6.zalo.activities.mess.MessFragment"
        android:label="@string/title_mess"
        tools:layout="@layout/fragment_mess" />

    <fragment
        android:id="@+id/navigation_contact"
        android:name="hcmute.edu.vn.nhom6.zalo.activities.contact.ContactFragment"
        android:label="@string/title_contact"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="hcmute.edu.vn.nhom6.zalo.activities.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>