<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g1"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/textZalo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/g1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/zalo"
        android:textColor="@color/primary"
        android:textSize="@dimen/_48sdp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        app:layout_constraintTop_toTopOf="@id/g1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_20ssp"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/_20ssp"
        app:backgroundTint="@color/primary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignUp"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_5ssp"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:cornerRadius="@dimen/_20ssp"
        app:backgroundTint="@color/gray"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>